# telegram_story_game

./: .gitignore  Makefile  pyproject.toml  setup.cfg
alembic/: env.py
ansible/: deploy_to_DO.yml
data_base/: __init__.py  chapter.py  db.py  db_tool.py  db_utils.py  main.py  message.py  models.py  schemas.py  story.py  telegram_user.py
database/: Dockerfile  Makefile  pyproject.toml  requirements.txt  setup.cfg
database/alembic/: env.py
database/alembic/versions/: 03c96d0181c4_.py  3fb43b9994b1_.py  4eaf73155b63_.py  50d19a7ccd93_.py  5fbc01023020_.py  861642d09a64_.py  8f6515da031d_.py  9d8ed1656506_.py  be213c907efa_.py  e079fc78aa24_.py  f003d42a1863_.py  fd4d399baef3_.py
database/data_base/: db.py  main.py  models.py  routes.py  schemas.py
database/data_base/api_routes/: main.py  message.py
database/data_base/local_routes/: chapter.py  media.py  message.py  story.py
database/data_base/services/: button.py  chapter.py  media.py  message.py  story.py  telegram_user.py
database/tests/: __init__.py
game_master/: Dockerfile  Makefile  pyproject.toml  requirements.txt  run.py
game_master/gamemaster_bot/: __init__.py  app.py  flask_routes.py  mem.py  tools.py
game_master/gamemaster_bot/handlers/: chapter.py  message.py  story.py  user.py
game_master/gamemaster_bot/menu/: button.py  chapter.py  message.py  story.py  tg_user.py
game_master/gamemaster_bot/static/: style.css
game_master/gamemaster_bot/templates/: chapter_template.html
game_master/tests/: __init__.py
story_game/: __init__.py
tests/: conftest.py  test_data_base.py
(+20 files in other folders)
