[tool.poetry]
name = "story_game"
version = "0.1.0"
description = ""
authors = ["vaclav-v"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.3.23"
psycopg2-binary = "^2.8.6"
alembic = "^1.5.4"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
gunicorn = "^20.0.4"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.1"
mypy = "^0.812"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
sqlalchemy-stubs = "^0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
